Made content providers and label providers respect private tag of methods, private global methods can only be accessed from solution, form private methods from form, entity  private methods from table node; also added builder checks(case SVY-1045: New Method dialog: when creating a new entity method, after specifying the name and clikcing OK, the OK/Next button is not enabled to finish the creation) Case: SVY-1045